es6 arrow function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The complete Typescript Course</title>
-    <script src="./samples/hello-world.js"></script>
+    <script src="./samples/hello-world1.js"></script>
 </head>
 <body>
 
