--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>The complete Typescript Course</title>
-    <script src="./samples/hello-world2.js"></script>
+    <script src="https://npmcdn.com/systemjs@0.19.27/dist/system.src.js"></script>
+    <script>
+        System.config({
+            defaultJSExtensions:true
+        });
+        System.import('/samples/hello-world2');
+    </script>
 </head>
 <body>
 
