--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         System.config({
             defaultJSExtensions:true
         });
-        System.import('/samples/hello-world2');
+        System.import('/samples/learning-types.js');
     </script>
 </head>
 <body>
